<resources>
    <string name="app_name">FivaMusic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <string name="retailer_heading">Begin new journey</string>
    <string name="retailer_tag_line">Boom</string>
    <string name="create_account">Create Account</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="about_us">About Us</string>
    <string name="signup">Sign Up</string>
    <string name="forget_password">Forget Password</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
<!--    <string name=""></string>-->


</resources>