<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.loginsignup.RetailerStartupScreen"
    android:background="@color/white"
    android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/user"
                tools:srcCompat="@drawable/user"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="cursive"
                android:text="@string/retailer_heading"
                android:textColor="#64FFDA"
                android:layout_marginTop="100dp"
                android:textSize="36dp"
                android:textStyle="bold" />
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_weight="1"
                    android:background="#64FFDA"
                    android:layout_marginRight="10dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:layout_weight="1"
                    android:background="#64FFDA"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:layout_weight="1"
                android:background="#AD80FFFF"
                android:layout_marginTop="10dp"/>
        </LinearLayout>

</ScrollView>